Fixed issue where inline code on posts app was spaced too far from the text to the left; fixed issue where the login screen was too wide on mobile; modified landing contact form.

--- a/accounts/static/accounts/css/login.css
+++ b/accounts/static/accounts/css/login.css
@@ -176,7 +176,8 @@ p {
 @media screen and (max-width: 568px) {
 
     .card {
-        width: 25rem;
+        width: 23rem;
+        font-size: smaller;
 }
     #demo_modal {
         font-size: 18px;
