--- a/live-static/static-root/posts/css/posts.css
+++ b/live-static/static-root/posts/css/posts.css
@@ -390,6 +390,12 @@ pre {
     /*background: #23232c;*/
 }
 
+pre code {
+    margin-left: 2rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+}
+
 #posts-lists-sidebar a {
     /*color: white;*/
     font-size: 16px;
@@ -440,7 +446,6 @@ code {
     color: #e83e8c;
     word-break: break-word;
     font-family: "Fira Code Retina", AndaleMono, monospace;
-    margin-left: .5rem;
     /*background: #23232c;*/
 }
 
